fix button alignment bug

--- a/styles.css
+++ b/styles.css
@@ -101,16 +101,17 @@ td.filling {
 }
 
 .button-empty-right {
-  width: 3%;
+  width: auto;
 }
 
 .button-empty-left {
-  width: 3%;
+  width: auto;
 }
 
 .text1 {
   padding-top: 35px;
   width: 8%;
+  min-width: 117px;
   color: #fffec8;
 }
 
@@ -121,13 +122,18 @@ td.filling {
 }
 
 
-.arrow-button-left {
+/* .arrow-button-left {
   display: block;
   position: relative;
   padding-bottom: 10px;
   width: 30px;
   height: 100%;
   float: right;
+} */
+
+.arrow-button-left {
+  text-align: end;
+  padding-bottom: 10px;
 }
 
 .arrow-button-right {
@@ -144,6 +150,7 @@ td.filling {
 .auto-play-btn {
   position: relative;
   width: 100%;
+  min-width: 214px;
   height: 100%;
   z-index: 100;
   margin: 0;
@@ -169,6 +176,7 @@ td.filling {
   position: relative;
   display: inline;
   width: 100%;
+  min-width: 214px;
   height: 100%;
   z-index: 50;
   margin: 0;
@@ -224,7 +232,6 @@ td.filling {
   background-repeat: no-repeat;
   width: 20px;
   height: 20px;
-  vertical-align: middle;
 }
 
 .right-arrow {
